add unit test, sonarqube, refactor code